--- a/sygpress-api/src/main/resources/application-prod.yml
+++ b/sygpress-api/src/main/resources/application-prod.yml
@@ -1,19 +1,19 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: ${SERVER_PORT}
 
 spring:
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:sygpress_db}}
-    username: ${DB_USERNAME:postgres}
+    url: ${SPRING_DATASOURCE_URL://${DB_HOST}:${DB_PORT}/${DB_NAME}}
+    username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
     hikari:
-      maximum-pool-size: ${DB_POOL_MAX_SIZE:10}
-      minimum-idle: ${DB_POOL_MIN_IDLE:5}
+      maximum-pool-size: ${DB_POOL_MAX_SIZE}
+      minimum-idle: ${DB_POOL_MIN_IDLE}
       idle-timeout: ${DB_POOL_IDLE_TIMEOUT:30000}
   jpa:
     hibernate:
-      ddl-auto: ${HIBERNATE_DDL_AUTO:update}
+      ddl-auto: ${HIBERNATE_DDL_AUTO}
     defer-datasource-initialization: true
     properties:
       hibernate:
