--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ DB_PORT=5432
 DB_NAME=sygpress_db
 DB_USERNAME=postgres
 DB_PASSWORD=
-DATABASE_URL=
+DB_URL=
 
 # Configuration du pool de connexions Hikari
 DB_POOL_MAX_SIZE=10
