--- a/sygpress-api/src/main/resources/application-prod.yml
+++ b/sygpress-api/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ app:
 
 spring:
   datasource:
-    url: ${DATABASE_URL}
+    url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
